[gd_scene load_steps=23 format=3 uid="uid://c3j8r13vamxwo"]

[ext_resource type="PackedScene" uid="uid://cabp2sepknfky" path="res://player/models/FirstPersonArms.glb" id="1_0ssfh"]
[ext_resource type="Script" path="res://player/scripts/Arms.gd" id="2_7a8ya"]
[ext_resource type="Material" uid="uid://bn63o7s7ibaw0" path="res://player/materials_textures/player_arms_mat.tres" id="3_cvqcd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xmtb1"]
size = Vector3(0.0773925, 0.0385132, 1.27595)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3fggg"]
animation = &"Block"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_adtpw"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vc3i8"]
animation = &"Swing1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1nwkp"]
animation = &"Swing2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p2gyg"]
animation = &"Swing3"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jssyq"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d2oot"]
xfade_time = 0.1
advance_mode = 2
advance_expression = "swing_trigger"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5ldb8"]
xfade_time = 1.0
switch_mode = 2
advance_mode = 2
advance_expression = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i63jm"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2
advance_expression = "swing_trigger"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yijy5"]
xfade_time = 1.0
switch_mode = 2
advance_mode = 2
advance_expression = "idle
"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jelnr"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2
advance_expression = "swing_trigger"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ttikf"]
xfade_time = 1.0
switch_mode = 2
advance_mode = 2
advance_expression = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aemc0"]
xfade_time = 0.2
advance_mode = 2
advance_expression = "blocking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0258j"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2
advance_expression = "blocking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rbm11"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2
advance_expression = "blocking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kvwci"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2
advance_expression = "blocking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_61v83"]
xfade_time = 0.5
advance_mode = 2
advance_expression = "!blocking"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1yeam"]
states/Block/node = SubResource("AnimationNodeAnimation_3fggg")
states/Block/position = Vector2(602, -76)
states/Idle/node = SubResource("AnimationNodeAnimation_adtpw")
states/Idle/position = Vector2(462, 63)
states/Start/position = Vector2(259, 89)
states/Swing1/node = SubResource("AnimationNodeAnimation_vc3i8")
states/Swing1/position = Vector2(765, 63)
states/Swing2/node = SubResource("AnimationNodeAnimation_1nwkp")
states/Swing2/position = Vector2(765, 292)
states/Swing3/node = SubResource("AnimationNodeAnimation_p2gyg")
states/Swing3/position = Vector2(462, 292)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_jssyq"), "Idle", "Swing1", SubResource("AnimationNodeStateMachineTransition_d2oot"), "Swing1", "Idle", SubResource("AnimationNodeStateMachineTransition_5ldb8"), "Swing1", "Swing2", SubResource("AnimationNodeStateMachineTransition_i63jm"), "Swing2", "Idle", SubResource("AnimationNodeStateMachineTransition_yijy5"), "Swing2", "Swing3", SubResource("AnimationNodeStateMachineTransition_jelnr"), "Swing3", "Idle", SubResource("AnimationNodeStateMachineTransition_ttikf"), "Idle", "Block", SubResource("AnimationNodeStateMachineTransition_aemc0"), "Swing2", "Block", SubResource("AnimationNodeStateMachineTransition_0258j"), "Swing1", "Block", SubResource("AnimationNodeStateMachineTransition_rbm11"), "Swing3", "Block", SubResource("AnimationNodeStateMachineTransition_kvwci"), "Block", "Idle", SubResource("AnimationNodeStateMachineTransition_61v83")]
graph_offset = Vector2(-46, -95)

[node name="FirstPersonArms" instance=ExtResource("1_0ssfh")]
script = ExtResource("2_7a8ya")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/1/rotation = Quaternion(-0.174146, -0.360765, 0.724326, 0.561136)
bones/2/rotation = Quaternion(-0.183194, -0.248154, 0.00613625, 0.951221)
bones/3/rotation = Quaternion(0.10513, 0.00328117, 0.0272063, 0.994081)
bones/4/rotation = Quaternion(-9.04906e-08, 3.68665e-08, -0.83134, 0.555764)
bones/5/rotation = Quaternion(3.36919e-08, -1.01076e-07, -0.695319, 0.718701)
bones/6/rotation = Quaternion(-0.390788, -0.251285, -0.444036, 0.766141)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(0.371639, -0.46685, -0.109496, 0.79495)
bones/10/scale = Vector3(1, 1, 1)
bones/11/scale = Vector3(1, 1, 1)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(0.421507, -0.537996, 0.652852, 0.326613)
bones/14/rotation = Quaternion(-0.0510663, 0.00900144, 0.688714, 0.723176)
bones/15/rotation = Quaternion(0.179889, 0.393762, -0.299904, 0.850088)
bones/16/rotation = Quaternion(-6.02851e-08, -6.55732e-08, 0.880573, 0.473911)
bones/17/rotation = Quaternion(-0.0227556, -0.0278903, 0.632087, 0.774061)
bones/18/rotation = Quaternion(-0.221479, 0.786632, -0.394725, -0.419939)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(-0.00380706, -0.064448, 0.0600313, 0.996107)
bones/19/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(0.501206, -0.498791, -0.498791, 0.501206)
bones/22/rotation = Quaternion(-0.508476, 0.491378, -0.491378, 0.508476)
bones/23/rotation = Quaternion(0.501206, -0.498791, -0.498791, 0.501206)

[node name="SwordHilt" parent="Armature/Skeleton3D" index="0"]
transform = Transform3D(-0.56773, 0.526111, 0.633159, -0.0580409, 0.741634, -0.668289, -0.821167, -0.416157, -0.390512, -0.465744, -0.457428, -0.689397)

[node name="WeaponHitbox" type="Area3D" parent="Armature/Skeleton3D/SwordHilt" index="0"]
transform = Transform3D(0.809014, 0, 0, 0, -3.53631e-08, -0.809014, 0, 0.809014, -3.53631e-08, 0, 0, 0)

[node name="Collider" type="CollisionShape3D" parent="Armature/Skeleton3D/SwordHilt/WeaponHitbox" index="0"]
transform = Transform3D(1.52787, -2.98023e-08, -1.78814e-07, 5.96046e-08, 1.52787, -4.47035e-08, -5.96046e-08, -1.49012e-07, 1.52787, -1.19209e-07, 1.49012e-07, -1.29301)
shape = SubResource("BoxShape3D_xmtb1")

[node name="SwordHilt" parent="Armature/Skeleton3D/SwordHilt" index="1"]
surface_material_override/0 = ExtResource("3_cvqcd")

[node name="Cube_003" parent="Armature/Skeleton3D" index="1"]
transform = Transform3D(-0.56773, 0.633159, -0.526111, -0.0580409, -0.668289, -0.741634, -0.821167, -0.390512, 0.416157, 0.375979, 0.731592, -1.35648)

[node name="Cube_003" parent="Armature/Skeleton3D/Cube_003" index="0"]
surface_material_override/0 = ExtResource("3_cvqcd")

[node name="Cube_004" parent="Armature/Skeleton3D" index="2"]
transform = Transform3D(-0.56773, 0.633159, -0.526111, -0.0580409, -0.668289, -0.741634, -0.821167, -0.390512, 0.416157, -0.148865, -0.0082567, -0.941326)

[node name="Cube_004" parent="Armature/Skeleton3D/Cube_004" index="0"]
surface_material_override/0 = ExtResource("3_cvqcd")

[node name="Cylinder_001" parent="Armature/Skeleton3D" index="3"]
transform = Transform3D(-0.56773, 0.633159, -0.526111, -0.0580409, -0.668289, -0.741634, -0.821167, -0.390512, 0.416157, -0.58588, -0.624296, -0.595645)

[node name="Cylinder_001" parent="Armature/Skeleton3D/Cylinder_001" index="0"]
surface_material_override/0 = ExtResource("3_cvqcd")

[node name="Arm_L" parent="Armature/Skeleton3D" index="4"]
surface_material_override/0 = ExtResource("3_cvqcd")

[node name="Arm_R" parent="Armature/Skeleton3D" index="5"]
surface_material_override/0 = ExtResource("3_cvqcd")

[node name="Cube_007" parent="Armature/Skeleton3D" index="6"]
surface_material_override/0 = ExtResource("3_cvqcd")

[node name="Elbow_R" parent="Armature/Skeleton3D" index="7"]
surface_material_override/0 = ExtResource("3_cvqcd")

[node name="Hand_L" parent="Armature/Skeleton3D" index="8"]
surface_material_override/0 = ExtResource("3_cvqcd")

[node name="Hand_R" parent="Armature/Skeleton3D" index="9"]
surface_material_override/0 = ExtResource("3_cvqcd")

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeStateMachine_1yeam")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[connection signal="body_entered" from="Armature/Skeleton3D/SwordHilt/WeaponHitbox" to="." method="_on_weapon_hitbox_body_entered"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="animation_started" from="AnimationTree" to="." method="_on_animation_tree_animation_started"]
